--- a/css/style.css
+++ b/css/style.css
@@ -128,7 +128,7 @@ button {
 }
 
 .hero {
-  min-height: 100vh;
+  margin-bottom: 150px;
 }
 .hero__tags {
   display: flex;
@@ -259,4 +259,81 @@ button {
   top: -24px;
   background: rgb(220, 202, 135);
   z-index: -1;
+}
+
+.about {
+  background-image: url("../assets/bg-about.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.about__inner {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 85px;
+}
+.about__content {
+  position: relative;
+  z-index: 5;
+}
+.about__content--text-right {
+  text-align: right;
+}
+.about__title {
+  position: relative;
+  color: #dcca87;
+  font-variant-numeric: lining-nums tabular-nums;
+  font-family: "Cormorant Upright", serif;
+  font-size: 64px;
+  font-weight: 600;
+  line-height: 130%;
+  letter-spacing: 1.92px;
+  text-transform: capitalize;
+  margin-bottom: 50px;
+}
+.about__title--right::before {
+  content: "";
+  position: absolute;
+  background-image: url("../assets/decor.svg");
+  width: 40px;
+  height: 10px;
+  right: 0;
+  bottom: -15px;
+  transform: rotate(180deg);
+}
+.about__title--left::before {
+  content: "";
+  position: absolute;
+  background-image: url("../assets/decor.svg");
+  width: 40px;
+  height: 10px;
+  left: 0;
+  bottom: -15px;
+}
+.about__descr {
+  margin-bottom: 32px;
+}
+.about__img {
+  width: 84px;
+  height: 703px;
+  margin: 128px 0;
+  position: relative;
+}
+.about__img img {
+  height: 100%;
+  position: relative;
+  z-index: 5;
+}
+.about__img::after {
+  content: "";
+  position: absolute;
+  background-image: url("../assets/g.svg");
+  width: 390px;
+  height: 415px;
+  top: 150px;
+  left: -150px;
 }/*# sourceMappingURL=style.css.map */
