--- a/scss/style.scss
+++ b/scss/style.scss
@@ -126,7 +126,7 @@ button {
 }
 
 .hero {
-	min-height: 100vh;
+	margin-bottom: 150px;
 	&__tags {
 		display: flex;
 		flex-direction: column;
@@ -266,6 +266,96 @@ button {
 			top: -24px;
 			background: rgb(220, 202, 135);
 			z-index: -1;
+		}
+	}
+}
+
+.about {
+	background-image: url("../assets/bg-about.jpg");
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	&__inner {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		gap: 85px;
+	}
+
+	&__content {
+		position: relative;
+		z-index: 5;
+		&--text-right {
+			text-align: right;
+		}
+	}
+
+	&__title {
+		position: relative;
+		color: #dcca87;
+		font-variant-numeric: lining-nums tabular-nums;
+		font-family: "Cormorant Upright", serif;
+		font-size: 64px;
+		font-weight: 600;
+		line-height: 130%;
+		letter-spacing: 1.92px;
+		text-transform: capitalize;
+		margin-bottom: 50px;
+		&--right {
+			&::before {
+				content: "";
+				position: absolute;
+				background-image: url("../assets/decor.svg");
+				width: 40px;
+				height: 10px;
+				right: 0;
+				bottom: -15px;
+				transform: rotate(180deg);
+			}
+		}
+		&--left {
+			&::before {
+				content: "";
+				position: absolute;
+				background-image: url("../assets/decor.svg");
+				width: 40px;
+				height: 10px;
+				left: 0;
+				bottom: -15px;
+			}
+		}
+	}
+
+	&__descr {
+		margin-bottom: 32px;
+	}
+
+	&__btn {
+	}
+
+	&__img {
+		width: 84px;
+		height: 703px;
+		margin: 128px 0;
+		position: relative;
+
+		img {
+			height: 100%;
+			position: relative;
+			z-index: 5;
+		}
+		&::after {
+			content: "";
+			position: absolute;
+			background-image: url("../assets/g.svg");
+			width: 390px;
+			height: 415px;
+			top: 150px;
+			left: -150px;
 		}
 	}
 }
