--- a/scss/style.scss
+++ b/scss/style.scss
@@ -21,6 +21,7 @@ body {
 	background: #0c0b08;
 	line-height: 175%;
 	letter-spacing: 0.64px;
+	outline: #f5efdb;
 }
 a {
 	text-decoration: none;
@@ -46,14 +47,41 @@ button {
 	font-family: "Cormorant Upright", serif;
 	font-size: 16px;
 	font-weight: 700;
-	line-height: 175%; /* 28px */
+	line-height: 175%;
 	letter-spacing: 0.64px;
-	padding: 4px 32px;
+	padding: 8px 32px;
 	background: #dcca87;
 	transition: all 0.3s;
 	&:hover {
 		background: #fcd753;
 		transform: translate(3px, -2px);
+	}
+}
+.title {
+	color: #dcca87;
+	font-family: "Cormorant Upright", serif;
+	font-weight: 600;
+	line-height: 130%;
+	letter-spacing: 1.92px;
+	text-transform: capitalize;
+}
+.subtitle {
+	position: relative;
+	font-family: "Cormorant Upright", serif;
+	font-size: 23px;
+	font-weight: 700;
+	line-height: 130%;
+	letter-spacing: 0.92px;
+	text-transform: capitalize;
+	margin-bottom: 25px;
+	&::before {
+		content: "";
+		position: absolute;
+		background-image: url("../assets/decor.svg");
+		width: 40px;
+		height: 10px;
+		left: 0;
+		bottom: -15px;
 	}
 }
 .big-container {
@@ -158,7 +186,7 @@ button {
 		font-size: 20px;
 
 		font-weight: 400;
-		line-height: 175%; /* 28px */
+		line-height: 175%;
 		letter-spacing: 0.64px;
 		span {
 			position: relative;
@@ -183,6 +211,7 @@ button {
 		letter-spacing: 0.64px;
 		text-transform: uppercase;
 		position: relative;
+
 		&::before {
 			content: "";
 			position: absolute;
@@ -200,35 +229,10 @@ button {
 	align-items: center;
 	gap: 180px;
 
-	&__subtitle {
-		position: relative;
-		font-family: "Cormorant Upright", serif;
-		font-size: 23px;
-		font-weight: 700;
-		line-height: 130%; /* 29.9px */
-		letter-spacing: 0.92px;
-		text-transform: capitalize;
-		margin-bottom: 25px;
-		&::before {
-			content: "";
-			position: absolute;
-			background-image: url("../assets/decor.svg");
-			width: 40px;
-			height: 10px;
-			left: 0;
-			bottom: -15px;
-		}
-	}
-
 	&__title {
-		font-family: "Cormorant Upright", serif;
 		font-size: 90px;
-
 		font-weight: 600;
-		color: #dcca87;
-		line-height: 130%; /* 117px */
 		letter-spacing: 3.6px;
-		text-transform: capitalize;
 		margin-bottom: 32px;
 	}
 
@@ -236,7 +240,7 @@ button {
 		font-family: "Open Sans", sans-serif;
 		font-size: 16px;
 		font-weight: 400;
-		line-height: 175%; /* 28px */
+		line-height: 175%;
 		letter-spacing: 0.64px;
 		margin-bottom: 32px;
 	}
@@ -275,10 +279,6 @@ button {
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
-
-	display: flex;
-	justify-content: center;
-	align-items: center;
 	&__inner {
 		display: flex;
 		align-items: center;
@@ -296,14 +296,7 @@ button {
 
 	&__title {
 		position: relative;
-		color: #dcca87;
-		font-variant-numeric: lining-nums tabular-nums;
-		font-family: "Cormorant Upright", serif;
 		font-size: 64px;
-		font-weight: 600;
-		line-height: 130%;
-		letter-spacing: 1.92px;
-		text-transform: capitalize;
 		margin-bottom: 50px;
 		&--right {
 			&::before {
@@ -334,9 +327,6 @@ button {
 		margin-bottom: 32px;
 	}
 
-	&__btn {
-	}
-
 	&__img {
 		width: 84px;
 		height: 703px;
@@ -357,6 +347,87 @@ button {
 			top: 150px;
 			left: -150px;
 		}
+	}
+}
+.menu {
+	&__inner {
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+		padding: 127px 0;
+	}
+
+	&__subtitle {
+		color: #fff;
+		&::before {
+			left: 50%;
+			transform: translateX(-50%);
+		}
+	}
+
+	&__title {
+		font-size: 64px;
+		letter-spacing: 2.56px;
+		margin-bottom: 64px;
+	}
+}
+
+.menu-content {
+	display: flex;
+	gap: 32px;
+
+	&__title {
+		text-align: center;
+		color: #fff;
+		font-size: 45px;
+		letter-spacing: 1.8px;
+		padding-top: 32px;
+		margin-bottom: 48px;
+	}
+
+	&__item {
+		margin-bottom: 40px;
+	}
+
+	&__item-name {
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+	}
+
+	&__item-title {
+		text-align: left;
+		margin-right: 30px;
+		margin-bottom: 8px;
+		max-width: 200px;
+		font-family: "Cormorant Upright", serif;
+		font-size: 23px;
+		font-weight: 700;
+	}
+
+	&__item-price {
+		font-family: "Cormorant Upright", serif;
+		font-size: 23px;
+		font-weight: 700;
+		position: relative;
+		padding-left: 120px;
+		margin-left: 30px;
+
+		&::before {
+			content: "";
+			position: absolute;
+			width: 120px;
+			height: 1px;
+			left: -30px;
+			top: 16px;
+			background: #fff;
+		}
+	}
+
+	&__img {
+		margin-bottom: 64px;
+		position: relative;
 	}
 }
 
