--- a/scss/style.scss
+++ b/scss/style.scss
@@ -67,6 +67,7 @@ button {
 	line-height: 130%;
 	letter-spacing: 1.92px;
 	text-transform: capitalize;
+	margin-bottom: 64px;
 }
 .subtitle {
 	position: relative;
@@ -520,7 +521,7 @@ button {
 		width: 235px;
 	}
 }
-////////
+
 .costomers {
 	&__inner {
 		padding: 152px 0;
@@ -585,7 +586,6 @@ button {
 
 .video {
 	position: relative;
-	// height: 763px;
 
 	video {
 		height: 763px;
@@ -608,6 +608,64 @@ button {
 		bottom: 0;
 		right: 0;
 		left: 0;
+	}
+}
+
+.awards {
+	background-image: url("../assets/bg.jpg");
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+
+	&__inner {
+		padding: 128px 0;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		gap: 0 183px;
+	}
+
+	&__title {
+		font-size: 64px;
+	}
+
+	&__content {
+		display: grid;
+		grid-template-columns: repeat(2, 1fr);
+		gap: 64px 32px;
+	}
+
+	&__content-item {
+		display: flex;
+		align-items: center;
+		gap: 0 32px;
+	}
+
+	&__content-icon {
+		width: 79px;
+		height: 79px;
+	}
+
+	&__content-title {
+		font-weight: 700;
+		font-size: 23px;
+		margin-bottom: 8px;
+		text-wrap: nowrap;
+	}
+
+	&__img {
+		position: relative;
+
+		&::before {
+			content: "";
+			position: absolute;
+			width: 360px;
+			height: 380px;
+			background-image: url("../assets/g-white.svg");
+			background-repeat: no-repeat;
+			left: -72px;
+			bottom: 6px;
+		}
 	}
 }
 
